<resources>
    <string name="app_name">Zing</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login_here">Login Here</string>
    <string name="new_user">New User?</string>
    <string name="register_here">Register Here</string>
    <string name="liked_by_riyazuddin515">Liked by riyazuddin515</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="postimage">PostImage</string>
    <string name="riyazuddin515">riyazuddin515</string>
    <string name="search_user">Search User</string>
    <string name="createpostimageview">CreatePostImageView</string>
    <string name="select_image">Select Image</string>
    <string name="enter_caption">Enter Caption</string>
    <string name="bio">Bio</string>
    <string name="follow">Follow</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="trashimage">TrashImage</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="settings">Settings</string>
    <string name="error_fields_can_not_be_empty">Fields can\'t be Empty</string>

    <string name="error_name_empty">Name can not be empty</string>
    <string name="error_name_too_short">Name can\'t have less than %d characters</string>
    <string name="error_name_too_long">Name can\'t have more than %d characters</string>
    <string name="error_name_valid_message">Name must be in a-z,A-z</string>

    <string name="error_username_empty">Username can not be empty</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_username_valid_message">Username start with alphabet and can have alphabet, digit and _</string>

    <string name="error_email_empty">Email can not be empty</string>
    <string name="error_not_a_valid_email">Enter Valid Email Address</string>

    <string name="error_password_empty">Password can not be empty</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_password_too_long">The password must be less than %d digits long</string>

    <string name="repeat_password">Repeat Password</string>
    <string name="error_password_not_match">Password doesn\'t match</string>

    <string name="registration_success">Registration Success! Verify your Email</string>

    <string name="a_mail_with_password_reset_link_will_be_sent_to_you_email_address">A mail with password reset link will be sent to you email address.</string>
    <string name="send_mail">Send Mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="update_details">Update Details</string>
    <string name="submit">Submit</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="name">Name</string>
    <string name="email_verification">An email with a verification link has been sent to you mail id. Please verify your mail id by clicking on the link. If you can not find it in inbox then please check spam</string>
    <string name="mail_icon">mail_icon</string>
    <string name="error_select_an_image">Please select an Image</string>
    <string name="caption">caption</string>
    <string name="delete_post_dialog_title">Delete this post?</string>
    <string name="delete_post_dialog_message">This action cannot be undone.</string>
    <string name="delete_comment_dialog_title">Delete this comment?</string>
    <string name="delete_comment_dialog_message">This action cannot be undone.</string>
    <string name="delete_post_dialog_positive">Yes</string>
    <string name="delete_post_dialog_negative">No</string>
    <string name="unfollow">UnFollow</string>
    <string name="log_out">Log Out</string>
    <string name="send">send</string>
    <string name="profile">Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="update">Update</string>
    <string name="open_mail">Open Mail</string>
    <string name="day_or_night">Day or Night</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="verify">Verify</string>
    <string name="verify_your_password">Verify your Password</string>
    <string name="close">close</string>
    <string name="image">Image</string>
    <string name="button">button</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="new_chat">New Chat</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="plus_99">99+</string>
</resources>