<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_outline_search"
        android:title="@string/search" />

    <item
        android:id="@+id/createPostFragment"
        android:icon="@drawable/ic_outline_add_box"
        android:title="@string/post" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_outline_person"
        android:title="@string/profile" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_outline_settings"
        android:title="@string/settings" />




</menu>